downloads page mobile alignment fix

--- a/src/app/components/downloads/downloads.component.css
+++ b/src/app/components/downloads/downloads.component.css
@@ -1,3 +1,9 @@
 .btn {
     box-shadow: none !important;
 }
+
+@media (min-width: 992px) {
+    mat-card {
+        height: 100%;
+    }
+}
